# Cursor-playground

./: README.md
bouncing-ball/: bouncing-ball.html  bounsinc-ball.py
car-soccer/: index.html  server.js  style.css
car-soccer/js/: ai-controller.js  ball.js  car.js  game.js
food-survivor/: index.html
food-survivor-asm/: compile.bat  game.asm  game.com  run.bat  setup.bat
food-survivor-cpp/: .gitignore  CMakeLists.txt  build_windows.bat  create_directories.bat
food-survivor-cpp/assets/fonts/: README.md
food-survivor-cpp/assets/sounds/: README.md
food-survivor-cpp/assets/textures/: README.md
food-survivor-cpp/src/: Boss.h  Config.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  Projectile.cpp  Projectile.h  UI.cpp  UI.h  WaveManager.cpp  WaveManager.h  Weapon.cpp  Weapon.h  main.cpp
food-survivor/css/: style.css
food-survivor/js/: assets.js  boss.js  config.js  damage-number.js  effects.js  enemy.js  game.js  highscores.js  particles.js  player.js  powerup.js  projectile.js  settings.js  sound.js  sprites.js  wave-manager.js
food-survivor/sounds/: generate-sounds.js  generate.html
shootem-up/: README.md  create-directories.sh  index.html  project-structure.md
shootem-up/css/: style.css
shootem-up/js/: assets.js  background.js  collision.js  effects.js  enemy.js  game.js  placeholder-assets.js  player.js  powerup.js  projectile.js
shootem-up/tools/: generate-sounds.js  sound-generator.html
